# futhark_ffi

./: Cargo.toml  README.md  build.rs
src/: bindings.rs  blake2s.rs  lib.rs  rt_compiler.rs  types.rs
