[package]
name = "futhark_ffi"
version = "0.1.0-devel"
edition = "2018"
authors = ["Peter Jin"]
license = "ISC"

[dependencies]
cc = { path = "../cc" }
libc = { path = "../libc" }
libloading = { path = "../libloading" }
rustc_serialize = { path = "../rustc_serialize" }
smol_str = { path = "../smol_str", default-features = false }
